{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 38,
  "lineage": "1860c839-93c2-a5a9-bb56-4e9ff04edb48",
  "resources": [
    {
      "module": "module.hre-apps",
      "mode": "data",
      "type": "aws_vpc",
      "name": "hre-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:vpc/vpc-092767728d08cced7",
            "cidr_block": "10.170.1.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04e1475bb1634b3f8",
                "cidr_block": "10.170.1.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-58a8383f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092767728d08cced7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0629ded5b7e934e58",
            "owner_id": "873212398515",
            "state": "available",
            "tags": {
              "Name": "QAT-HRE",
              "env": "shared",
              "layer": "dev",
              "product": "core"
            }
          }
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-bos",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-089794da464efcbe5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089794da464efcbe5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08df892ba8307d823",
            "private_dns": "ip-10-170-1-183.ec2.internal",
            "private_ip": "10.170.1.183",
            "public_dns": "ec2-35-174-15-250.compute-1.amazonaws.com",
            "public_ip": "35.174.15.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba68b5d024e74e69",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-BOS",
              "Version": "170",
              "env": "n/a",
              "function": "bo-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-BOS",
              "Version": "170",
              "env": "n/a",
              "function": "bo-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-BOS",
              "env": "n/a",
              "function": "bo-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-06a62f35cda74f2b2",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-core2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-03e7937b478feb5b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e7937b478feb5b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0597f1db584929183",
            "private_dns": "ip-10-170-1-70.ec2.internal",
            "private_ip": "10.170.1.70",
            "public_dns": "ec2-54-152-61-104.compute-1.amazonaws.com",
            "public_ip": "54.152.61.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5695099903d5da5",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-Core",
              "Version": "170",
              "env": "n/a",
              "function": "core-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-Core",
              "Version": "170",
              "env": "n/a",
              "function": "core-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-Core",
              "env": "n/a",
              "function": "core-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0c86737f8eed2ed4d",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-general-worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-0f0eb0fd9ec908a16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0eb0fd9ec908a16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008766b4600a1ef50",
            "private_dns": "ip-10-170-1-14.ec2.internal",
            "private_ip": "10.170.1.14",
            "public_dns": "ec2-3-80-119-11.compute-1.amazonaws.com",
            "public_ip": "3.80.119.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0244ae4145d45437d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-General-Worker",
              "Version": "170",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-General-Worker",
              "Version": "170",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-General-Worker",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0c86737f8eed2ed4d",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-lb-bos",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-091d82c25bbfcc2ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091d82c25bbfcc2ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-053d0130f5dec1531",
            "private_dns": "ip-10-170-1-22.ec2.internal",
            "private_ip": "10.170.1.22",
            "public_dns": "ec2-3-80-100-27.compute-1.amazonaws.com",
            "public_ip": "3.80.100.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d90697412d267df8",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-LB-BOS",
              "Version": "170",
              "env": "n/a",
              "function": "lb-bos",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-LB-BOS",
              "Version": "170",
              "env": "n/a",
              "function": "lb-bos",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-LB-BOS",
              "env": "n/a",
              "function": "lb-bos",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-05f672c6ee6e8e38a",
              "sg-0c86737f8eed2ed4d",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-special-worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-05a1183570cfe106f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a1183570cfe106f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f204971f84e0a4c7",
            "private_dns": "ip-10-170-1-20.ec2.internal",
            "private_ip": "10.170.1.20",
            "public_dns": "ec2-54-81-125-49.compute-1.amazonaws.com",
            "public_ip": "54.81.125.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04e23570d30466270",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-Special-Worker",
              "Version": "170",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-Special-Worker",
              "Version": "170",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-Special-Worker",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0c86737f8eed2ed4d",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-external-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-0c86737f8eed2ed4d",
            "description": "QAT2-HRE external access",
            "egress": [],
            "id": "sg-0c86737f8eed2ed4d",
            "ingress": [],
            "name": "QAT2-HRE-EXT-SG-20220407173939880300000003",
            "name_prefix": "QAT2-HRE-EXT-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-EXT-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-EXT-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-external-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-3609662480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c86737f8eed2ed4d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-external-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.69.35.205/32",
              "27.65.195.158/32",
              "184.69.72.190/32",
              "95.69.249.156/32",
              "128.0.169.65/32",
              "24.234.166.179/32",
              "54.173.212.103/32",
              "52.70.75.245/32",
              "18.162.78.188/32"
            ],
            "description": "SSH Access",
            "from_port": 22,
            "id": "sgrule-908272042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c86737f8eed2ed4d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.243.250.126/32"
            ],
            "description": "Zabbix Agent",
            "from_port": 10050,
            "id": "sgrule-3591619049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c86737f8eed2ed4d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 10050,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-internal-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-0ff9a1e1637d85ec4",
            "description": "QAT2-HRE internal access",
            "egress": [],
            "id": "sg-0ff9a1e1637d85ec4",
            "ingress": [],
            "name": "QAT2-HRE-INT-SG-20220407173939880200000001",
            "name_prefix": "QAT2-HRE-INT-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-INT-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-INT-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-internal-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-2437152085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ff9a1e1637d85ec4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-internal-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP Access",
            "from_port": 80,
            "id": "sgrule-4149379253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ff9a1e1637d85ec4",
            "self": false,
            "source_security_group_id": "sg-05f672c6ee6e8e38a",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this_name_prefix",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_lb-bos-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-05f672c6ee6e8e38a",
            "description": "QAT2-HRE LB access",
            "egress": [],
            "id": "sg-05f672c6ee6e8e38a",
            "ingress": [],
            "name": "QAT2-HRE-LB-SG-20220407173939880200000002",
            "name_prefix": "QAT2-HRE-LB-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-LB-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-LB-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_lb-bos-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-332921135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05f672c6ee6e8e38a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_lb-bos-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.69.35.205/32",
              "27.65.195.158/32",
              "184.69.72.190/32",
              "95.69.249.156/32",
              "128.0.169.65/32",
              "24.234.166.179/32",
              "54.173.212.103/32",
              "52.70.75.245/32",
              "18.162.78.188/32"
            ],
            "description": "SSH Access",
            "from_port": 443,
            "id": "sgrule-2835839515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05f672c6ee6e8e38a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "hre-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:vpc/vpc-092767728d08cced7",
            "cidr_block": "10.170.1.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04e1475bb1634b3f8",
                "cidr_block": "10.170.1.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-58a8383f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092767728d08cced7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0629ded5b7e934e58",
            "owner_id": "873212398515",
            "state": "available",
            "tags": {
              "Name": "QAT-HRE",
              "env": "shared",
              "layer": "dev",
              "product": "core"
            }
          }
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-0f85dd63359b6577d",
            "description": "QAT2-HRE RabbitMQ Application access",
            "egress": [],
            "id": "sg-0f85dd63359b6577d",
            "ingress": [],
            "name": "QAT2-HRE-RabbitMQ-APP-SG-20220407173939880300000004",
            "name_prefix": "QAT2-HRE-RabbitMQ-APP-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-RabbitMQ-APP-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-RabbitMQ-APP-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-854495172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f85dd63359b6577d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.170.1.0/24"
            ],
            "description": "RabbitMQ App access",
            "from_port": 5672,
            "id": "sgrule-2860962356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85dd63359b6577d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_vpc.hre-vpc",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.170.1.0/24"
            ],
            "description": "RabbitMQ App access",
            "from_port": 15672,
            "id": "sgrule-3466566134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85dd63359b6577d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 15672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_vpc.hre-vpc",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.170.1.0/24"
            ],
            "description": "RabbitMQ App access",
            "from_port": 4369,
            "id": "sgrule-3304100387",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85dd63359b6577d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4369,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_vpc.hre-vpc",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.170.1.0/24"
            ],
            "description": "RabbitMQ App access",
            "from_port": 25672,
            "id": "sgrule-1248366894",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85dd63359b6577d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 25672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_vpc.hre-vpc",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-0287085602fe867cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0287085602fe867cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cfc37f5818142eac",
            "private_dns": "ip-10-170-1-158.ec2.internal",
            "private_ip": "10.170.1.158",
            "public_dns": "ec2-18-208-192-180.compute-1.amazonaws.com",
            "public_ip": "18.208.192.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076a96c62fe10bed0",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-RabbitMQ-Node-1",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-RabbitMQ-Node-1",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-RabbitMQ-Node-1",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0603a9b50b0b7093b",
              "sg-0f85dd63359b6577d"
            ]
          },
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_subnet_ids.hre-subnets",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-071f24d70d8078f21",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071f24d70d8078f21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-069f8f343c2694367",
            "private_dns": "ip-10-170-1-192.ec2.internal",
            "private_ip": "10.170.1.192",
            "public_dns": "ec2-35-175-198-89.compute-1.amazonaws.com",
            "public_ip": "35.175.198.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ae6b1920aa6e3643",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-RabbitMQ-Node-2",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-RabbitMQ-Node-2",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-RabbitMQ-Node-2",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0603a9b50b0b7093b",
              "sg-0f85dd63359b6577d"
            ]
          },
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_subnet_ids.hre-subnets",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-0b1b4801cc2e694b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1b4801cc2e694b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e62c1c60b2f4341",
            "private_dns": "ip-10-170-1-116.ec2.internal",
            "private_ip": "10.170.1.116",
            "public_dns": "ec2-54-89-200-45.compute-1.amazonaws.com",
            "public_ip": "54.89.200.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f818149f3dd464de",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-RabbitMQ-Node-3",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-RabbitMQ-Node-3",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-RabbitMQ-Node-3",
              "env": "n/a",
              "function": "queue-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0603a9b50b0b7093b",
              "sg-0f85dd63359b6577d"
            ]
          },
          "dependencies": [
            "module.hre-rabbitmq-cluster.data.aws_subnet_ids.hre-subnets",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-app-sg.aws_security_group.this_name_prefix",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-0603a9b50b0b7093b",
            "description": "QAT2-HRE RabbitMQ external access",
            "egress": [],
            "id": "sg-0603a9b50b0b7093b",
            "ingress": [],
            "name": "QAT2-HRE-RabbitMQ-EXT-SG-20220407173939880300000005",
            "name_prefix": "QAT2-HRE-RabbitMQ-EXT-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-RabbitMQ-EXT-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-RabbitMQ-EXT-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-1552086269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0603a9b50b0b7093b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.69.35.205/32",
              "27.65.195.158/32",
              "184.69.72.190/32",
              "95.69.249.156/32",
              "128.0.169.65/32",
              "24.234.166.179/32",
              "54.173.212.103/32",
              "52.70.75.245/32",
              "18.162.78.188/32"
            ],
            "description": "SSH Access",
            "from_port": 22,
            "id": "sgrule-1968121885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0603a9b50b0b7093b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.243.250.126/32"
            ],
            "description": "Zabbix-agent",
            "from_port": 10050,
            "id": "sgrule-303994412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0603a9b50b0b7093b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 10050,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.69.35.205/32",
              "27.65.195.158/32",
              "184.69.72.190/32",
              "95.69.249.156/32",
              "128.0.169.65/32",
              "24.234.166.179/32",
              "54.173.212.103/32",
              "52.70.75.245/32",
              "18.162.78.188/32"
            ],
            "description": "RabbitMQ WEB UI access",
            "from_port": 15672,
            "id": "sgrule-3045160698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0603a9b50b0b7093b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 15672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this",
            "module.hre-rabbitmq-cluster.module.rabbitmq-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}